--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	vertical-align: baseline;
 	background: transparent;
 	font-family: sans-serif;
+	color: #fff;
 }
 body {
 	line-height: 1;
@@ -65,6 +66,10 @@ html, body {
 	background: url( 'map.png' ) no-repeat 0 0;
 }
 
+#legend p {
+	font-size: 12px;
+}
+
 #contain {
 	margin: 20px auto;
 	width: 960px;
@@ -79,7 +84,6 @@ h1#logo {
 
 div#userList {
 	height: 450px;
-	color: #fff;
 	font-size: 10px;
 	}
 
@@ -124,5 +128,4 @@ div#ammo .remaining {
 	font-size: 10px;
 	overflow: hidden;
 	clear: both;
-	color: #FFF;
 }
