--- a/static/style.css
+++ b/static/style.css
@@ -134,7 +134,7 @@ div#ammo .remaining {
 	background: url( "StartScreen.gif" ) no-repeat;
 	width: 800px;
 	height: 440px;
-	margin: 100px auto 0 auto;
+	margin: 0 auto;
 	position: relative;
 }
 
@@ -142,4 +142,18 @@ div#ammo .remaining {
 	position: absolute;
 	top: 325px;
 	left: 285px;
+}
+
+#character-screen {
+	background: url( "ChooseCharacter.gif" ) no-repeat;
+	width: 800px;
+	height: 610px;
+	margin: 0 auto;
+	position: relative;
+}
+
+#character-select {
+	position: absolute;
+	top: 300px;
+	left: 385px;
 }
