--- a/static/style.css
+++ b/static/style.css
@@ -176,6 +176,19 @@ div#ammo .remaining {
 
 #go-button {
 	position: absolute;
-	top: 300px;
-	left: 385px;
+	top: 206px;
+	left: 520px;
+}
+
+#name-input {
+	position: absolute;
+	top: 206px;
+	left: 80px;
+	width: 600px;
+	font-size: 54px;
+	border: 0 none;
+	height: 80px;
+	color: #404040;
+	background: #ADADAD;
+	padding: 10px;
 }
